Mirrored objects render black when using the Bevel Node #61103

Closed
opened 2019-02-01 16:54:48 +01:00 by Sebastian Koenig · 13 comments

System Information
Operating system: elementaryOS 0.4.1
Graphics card: GTX1080

Blender Version
Broken: 2.80, 7b05b2564d

Short description of error
Objects that use the Bevel Node render almost black. Happens to regular objects as well as Collection Instances. But only on F12! The error is not visible in Viewport Rendering.
Here's how it looks in the viewport:
bevel_mirror_viewport.jpeg

And this is how it looks when rendered (F12):
bevel_mirror_f12.jpeg

Happens also in 2.79 (master)
Exact steps for others to reproduce the error
Open this file and compare viewport render and F12:
bevel_mirror.blend

**System Information** Operating system: elementaryOS 0.4.1 Graphics card: GTX1080 **Blender Version** Broken: 2.80, 7b05b2564d8 **Short description of error** Objects that use the Bevel Node render almost black. Happens to regular objects as well as Collection Instances. But only on F12! The error is not visible in Viewport Rendering. Here's how it looks in the viewport: ![bevel_mirror_viewport.jpeg](https://archive.blender.org/developer/F6476701/bevel_mirror_viewport.jpeg) And this is how it looks when rendered (F12): ![bevel_mirror_f12.jpeg](https://archive.blender.org/developer/F6476708/bevel_mirror_f12.jpeg) Happens also in 2.79 (master) **Exact steps for others to reproduce the error** Open this file and compare viewport render and F12: [bevel_mirror.blend](https://archive.blender.org/developer/F6476732/bevel_mirror.blend)
Author
Member

Added subscriber: @sebastian_k

Added subscriber: @sebastian_k
Brecht Van Lommel was assigned by Sebastian Koenig 2019-02-01 16:55:18 +01:00

Added subscriber: @tstullich

Added subscriber: @tstullich

Hi, I am interested in trying to fix this issue. I was wondering in which files would I need to look in order to start tracking down the source of the bug?

Hi, I am interested in trying to fix this issue. I was wondering in which files would I need to look in order to start tracking down the source of the bug?

The bevel shader code is in intern/cycles/kernel/svm/svm_bevel.h.

The bevel shader code is in `intern/cycles/kernel/svm/svm_bevel.h`.

Ok, so I started taking a look at the shader code but I am having a hard time understanding it all, even with the reference paper in the comments. Is there a way to debug the shader code when it is running?

Ok, so I started taking a look at the shader code but I am having a hard time understanding it all, even with the reference paper in the comments. Is there a way to debug the shader code when it is running?

You can use a debugger to set a breakpoint on this function and step through the code. Which one depends on your development environment, it's not really a Blender specific thing.

This is not the easiest bug to start with though, if you're just getting start with Blender development you might want to pick an easier bug.

You can use a debugger to set a breakpoint on this function and step through the code. Which one depends on your development environment, it's not really a Blender specific thing. This is not the easiest bug to start with though, if you're just getting start with Blender development you might want to pick an easier bug.

Yeah, I am thinking I might be a little in over my head with this bug, although it has been fun reading up on MIS and BSSRDF concepts and getting to know the code base.

Do you have a suggestion for an easier bug to start with? I had asked in the IRC channel for one and this one was suggested to me as a starter.

Yeah, I am thinking I might be a little in over my head with this bug, although it has been fun reading up on MIS and BSSRDF concepts and getting to know the code base. Do you have a suggestion for an easier bug to start with? I had asked in the IRC channel for one and this one was suggested to me as a starter.
Author
Member

@tstullich so sorry to have put you on this, I really thought this would be an easy one , especially because it works fine in preview rendering.... I better shut up next time :)

@tstullich so sorry to have put you on this, I really thought this would be an easy one , especially because it works fine in preview rendering.... I better shut up next time :)

This issue was referenced by blender/cycles@19db93a06e

This issue was referenced by blender/cycles@19db93a06ed10e4e103f6bf5ca1d354684e39616

This issue was referenced by 56a633fd2c

This issue was referenced by 56a633fd2c404ade7c97a5d4579183c28a969c0b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Member

@brecht thanks so much for fixing! this makes so many things so much easier now! :)

@brecht thanks so much for fixing! this makes so many things so much easier now! :)

@tstullich, #56950 (UI Paper Cuts (Parent Task)) and #quick_hacks are probably a better place to start.

@tstullich, #56950 (UI Paper Cuts (Parent Task)) and #quick_hacks are probably a better place to start.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61103
No description provided.