Fix T61103: Cycles bevel wrong on objects with negative scale.